# csci104-tests

./: .gitignore  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
hw1/: Makefile  README.md
hw1/tests/: junit-flexchar.cpp  junit-palindrome.cpp  junit-simplechar.cpp
hw2/: README.md  jtest-clist.cpp  jtest-duckduck.cpp  jtest-ssort.cpp  jtest_hw2.py
hw2/hw2-check/: CMakeLists.txt
hw2/hw2-check/testing_utils/: random_generator.cpp
hw3/: CMakeLists.txt  README.md  jtest_hw3.py  stack-test.cpp  stack-tests.cpp
hw3/hw3-check/: CMakeLists.txt
hw3/hw3-check/parser_tests/: CMakeLists.txt  parser_test.cpp
hw3/hw3-check/stack_tests/: stack_test.cpp
hw3/hw3-check/testing_utils/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  parser_utils.cpp  parser_utils.h  user_code_runner.cpp
hw4/: README.md
hw5/: CMakeLists.txt  Fatalist-Test.cpp  Makefile  README.md
hw5/tests/: cave_test.cpp  fatalist_test.cpp  functor_test.cpp  merge_test.cpp
hw6/: .jtest  CMakeLists.txt  jtest_hw6.py
hw6/hw6-check/: CMakeLists.txt
hw6/hw6-check/color_tests/: color_tests.cpp  color_utils.cpp
hw6/hw6-check/heap_tests/: heap_tests.cpp
hw6/hw6-check/search_tests/: search_tests.cpp
hw6/tests/: color_test.cpp  minheap_test.cpp  search_test.cpp
hw7/: jtest_hw7.py
hw7/hw7-check/: CMakeLists.txt
hw7/hw7-check/avl_tests/: avl_tests.cpp
hw7/hw7-check/bst_tests/: bst_tests.cpp
hw7/hw7-check/rotate_tests/: rotate_tests.cpp
hw8/: CMakeLists.txt  README.md
hw8/trie-tests/: trie-test.cpp
